# poseidon2

./: Cargo.toml  README.md  poseidon2_rust_params.sage
plain/: Cargo.toml
plain/src/: lib.rs
plain/src/fields/: mod.rs
plain/src/poseidon2/: mod.rs  poseidon2.rs
poseidon2/: Cargo.toml
poseidon2/src/: lib.rs  primitives.rs  utils.rs
poseidon2/src/circuit/: hash_chip.rs  mod.rs  params.rs  params_bn254.rs  poseidon.rs  pow5.rs  primitives.rs  spec.rs  utils.rs
poseidon2/src/fields/: bn256.rs  grumpkin.rs  mod.rs
poseidon2/src/plain/: mod.rs  poseidon2.rs  poseidon2_instance_grumpkin.rs  poseidon2_params.rs
