[package]
name = "poseidon2"
version = "0.1.0"
authors = ["ak36 <ak10495@nyu.edu>"]
description = "Rust and Halo2 implementations of Poseidon2"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
hex = "0.4"
serde = "1.0"
lazy_static = "1.4"
cfg-if = "1.0"
sha3 = "0.10"
sha2 = "0.10"
blake2 = "0.10"
# for sinsemilla:
ff = "0.13"
group = "0.13"
halo2 = "=0.1.0-beta.2"
pasta_curves = "0.5"
subtle = "2.3"
random = {package = "rand", version = "0.8"}
# for pederson_hash:
group_ped = { package = "group", version = "0.12.1", features = ["wnaf-memuse"] }
bitvec = "1.0"
byteorder = "1.4"
jubjub = "0.9"
bls12_381 = "0.7"
halo2_proofs = { git = "https://github.com/amit0365/halo2.git", package="halo2_proofs", branch = "protostar"}

[dev-dependencies]
criterion = "0.4"

[features]
default = []
asm = ["sha2/asm", "blake2/simd_asm", "ark-ff/asm"]

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3

[profile.bench]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3